添加邮箱验证功能

--- a/test3.html
+++ b/test3.html
@@ -21,7 +21,7 @@
 <body>
 <table class="test" style="text-align:center;border-collapse: collapse;border:black;height: 360px;" border="1">
   <tr style="background: #cccc">
-    <td>杀了对方角度来说放假放假</td>
+    <td>杀了对方角度来说放假对方角度来说放假对方角度来说放假对方角度来说放假对方角度来说放假对方角度来说放假对方角度来说放假放假</td>
     <td>杀了对方角度来说放假放假</td>
     <td>杀了对方角度来说放假放假</td>
     <td>杀了对方角度来说放假放假</td>
