测试代码一样但记录不一样合并后结果

--- a/test.html
+++ b/test.html
@@ -10,6 +10,7 @@
 </div>
 <script src="node_modules/vue/dist/vue.js"></script>
 <script>
+  // 测试代码一样但记录不一样合并后结果
   let app = document.getElementById('app')
   console.log(app.querySelector('.ss'))
 </script>
