--- a/test.html
+++ b/test.html
@@ -60,6 +60,7 @@
 <script>
   // uat多余的一次提交
   // uat多余的第二次提交
+  // 改名提交
   //直接选择要截图的dom，就能截图，但是因为canvas的原因，生成的图片模糊
   //html2canvas(document.querySelector('div')).then(function(canvas) {
   //    document.body.appendChild(canvas);
